--- a/src/main/resources/templates/admin/editPropertyValue.html
+++ b/src/main/resources/templates/admin/editPropertyValue.html
@@ -59,7 +59,7 @@
         <li><a href="admin_category_list">所有分类</a></li>
         <li><a :href="'admin_product_list?cid='+category.id">{{category.name}}</a></li>
         <li class="active">{{product.name}}</li>
-        <li class="active">产品图片管理</li>
+        <li class="active">产品属性管理</li>
     </ol>
 
     <div class="editPVDiv">
