--- a/src/main/resources/templates/include/fore/cart/boughtPage.html
+++ b/src/main/resources/templates/include/fore/cart/boughtPage.html
@@ -130,7 +130,7 @@
 							</td>
 							<td  class="orderItemProductInfoPartTD" width="100px">
 								<div class="orderListItemProductOriginalPrice">￥{{oi.product.originalPrice|formatMoneyFilter}}</div>
-								<div class="orderListItemProductPrice">￥{{oi.product.promotePric|formatMoneyFilter}}</div>
+								<div class="orderListItemProductPrice">￥{{oi.product.promotePrice|formatMoneyFilter}}</div>
 							</td>
 							<template v-if="index==0">							 
 								<td valign="top" :rowspan="o.orderItems.length" class="orderListItemNumberTD orderItemOrderInfoPartTD" width="100px">
