--- a/src/main/resources/templates/include/fore/cart/confirmPayPage.html
+++ b/src/main/resources/templates/include/fore/cart/confirmPayPage.html
@@ -35,7 +35,7 @@
                 {{order.payDate|formatDateFilter}}
             </div>
             <div class="confirmPayTime3">
-                yyyy-MM-dd HH:mm:ss
+                {{order.deliveryDate|formatDateFilter}}
             </div>
         </div>
         <div class="confirmPayOrderInfoDiv">
